--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-simple-radio-group",
   "version": "1.0.0",
-  "description": "Radio Group Component for React easy to configure and compose",
+  "description":
+    "Radio Group Component for React easy to configure and compose",
   "author": "EmaSuriano",
   "license": "MIT",
   "repository": "EmaSuriano/react-simple-radio-group",
@@ -16,11 +17,12 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.3.0-alpha.1",
+    "react-dom": "^16.3.0-alpha.1"
+  },
   "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "prop-types": "^15.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -37,7 +39,5 @@
     "rollup-plugin-peer-deps-external": "^2.0.0",
     "rollup-plugin-postcss": "^1.1.0"
   },
-  "files": [
-    "dist"
-  ]
+  "files": ["dist"]
 }
