chore(App): testing npm link with the library

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-radio-group-context",
   "version": "1.0.0",
-  "description":
-    "Radio Group Component for React easy to configure and compose",
+  "description": "Radio Group Component for React easy to configure and compose",
   "author": "EmaSuriano",
   "license": "MIT",
   "repository": "EmaSuriano/react-radio-group-context",
@@ -39,5 +38,7 @@
     "rollup-plugin-peer-deps-external": "^2.0.0",
     "rollup-plugin-postcss": "^1.1.0"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
