--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-radio-group-context": "*",
+    "react-radio-group-context": "^1.0.0",
     "react-scripts": "^1.1.1"
   },
   "scripts": {
