--- a/example/package.json
+++ b/example/package.json
@@ -6,10 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.0-alpha.1",
+    "react-dom": "^16.3.0-alpha.1",
     "react-radio-group-context": "^1.0.0",
-    "react-scripts": "^1.1.1"
+    "react-scripts": "^1.1.1",
+    "styled-components": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
