--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "react": "^16.3.0-alpha.1",
-    "react-dom": "^16.3.0-alpha.1"
+    "react-dom": "^16.3.0-alpha.1",
+    "uuid": "^3.2.1"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4"
