--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-radio-group-context",
   "version": "1.0.1",
-  "description":
-    "Radio Group Component for React easy to configure and compose",
+  "description": "Radio Group Component for React easy to configure and compose",
   "author": "EmaSuriano",
   "license": "MIT",
   "repository": "EmaSuriano/react-radio-group-context",
@@ -15,8 +14,9 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "prepare": "npm run build",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "storybook": "start-storybook -p 9009",
+    "publish": "npm run build && npm publish",
+    "deploy": "build-storybook && gh-pages -d storybook-static"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -24,6 +24,14 @@
     "react-dom": "^16.3.0-alpha.1"
   },
   "devDependencies": {
+    "@dump247/storybook-state": "^1.2.4",
+    "@storybook/addon-actions": "^3.3.15",
+    "@storybook/addon-centered": "^3.3.15",
+    "@storybook/addon-info": "^3.3.15",
+    "@storybook/addon-knobs": "^3.3.15",
+    "@storybook/addon-links": "^3.3.15",
+    "@storybook/addons": "^3.3.15",
+    "@storybook/react": "^3.3.15",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -46,13 +54,23 @@
     "rollup-plugin-peer-deps-external": "^2.0.0",
     "rollup-plugin-postcss": "^1.1.0"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "jest": {
-    "setupFiles": ["<rootDir>/test-setup.js"],
+    "setupFiles": [
+      "<rootDir>/test-setup.js"
+    ],
     "transform": {
       "^.+\\.js$": "babel-jest"
     },
-    "moduleDirectories": ["node_modules"],
-    "collectCoverageFrom": ["src/**/*.{js,jsx}", "!src/index.js"]
-  }
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js"
+    ]
+  },
+  "dependencies": {}
 }
