chore(remove comments):

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-radio-group-context",
-  "version": "1.0.1",
-  "description": "Radio Group Component for React easy to configure and compose",
+  "version": "1.1.0",
+  "description":
+    "Radio Group Component for React easy to configure and compose",
   "author": "EmaSuriano",
   "license": "MIT",
   "repository": "EmaSuriano/react-radio-group-context",
@@ -54,23 +55,14 @@
     "rollup-plugin-peer-deps-external": "^2.0.0",
     "rollup-plugin-postcss": "^1.1.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "jest": {
-    "setupFiles": [
-      "<rootDir>/test-setup.js"
-    ],
+    "setupFiles": ["<rootDir>/test-setup.js"],
     "transform": {
       "^.+\\.js$": "babel-jest"
     },
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/index.js"
-    ]
+    "moduleDirectories": ["node_modules"],
+    "collectCoverageFrom": ["src/**/*.{js,jsx}", "!src/index.js"]
   },
   "dependencies": {}
 }
