--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "gh-pages": "^1.1.0",
     "jest": "^22.4.2",
+    "node-sass": "^4.9.2",
     "react": "^16.3.0-alpha.1",
     "react-dom": "^16.3.0-alpha.1",
     "react-scripts": "^1.1.1",
@@ -51,7 +52,9 @@
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-peer-deps-external": "^2.0.0",
-    "rollup-plugin-postcss": "^1.1.0"
+    "rollup-plugin-postcss": "^1.1.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0"
   },
   "files": [
     "dist"
