Fix skipped tests

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   ],
   "jest": {
     "setupFiles": [
-      "<rootDir>/test-setup.js"
+      "<rootDir>/test"
     ],
     "transform": {
       "^.+\\.js$": "babel-jest"
