--- a/.babelrc
+++ b/.babelrc
@@ -18,9 +18,9 @@
             "modules": false
           }
         ],
-        "es2015",
         "react",
-        "stage-0"
+        "stage-0",
+        "env"
       ]
     }
   }
