--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "start": "rollup -c -w",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "prepare": "npm run build",
     "storybook": "start-storybook -p 9009",
-    "deploy": "build-storybook && gh-pages -d storybook-static"
+    "deploy": "build-storybook && gh-pages -d storybook-static",
+    "lint": "eslint ./src"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -35,26 +35,29 @@
     "babel-eslint": "^8.2.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-utils": "^1.4.0",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "gh-pages": "^1.1.0",
     "jest": "^22.4.2",
     "node-sass": "^4.9.2",
     "raf": "^3.4.0",
-    "react": "^16.3.0-alpha.1",
-    "react-dom": "^16.3.0-alpha.1",
-    "react-scripts": "^1.1.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-reconciler": "^0.12.0",
     "react-test-renderer": "^16.2.0",
-    "rollup": "^0.54.0",
+    "rollup": "^0.54.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-peer-deps-external": "^2.0.0",
     "rollup-plugin-postcss": "^1.1.0",
-    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0"
   },
   "files": [
@@ -62,6 +65,7 @@
   ],
   "jest": {
     "setupFiles": [
+      "raf/polyfill",
       "<rootDir>/test"
     ],
     "transform": {
