build(package.json): Add env parameter to jest command

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test": "jest --coverage --env=jsdom",
+    "test:watch": "jest --watch --env=jsdom",
     "storybook": "start-storybook -p 9009",
     "deploy": "build-storybook && gh-pages -d storybook-static",
     "lint": "eslint ./src"
