--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.10.0",
     "gh-pages": "^1.1.0",
     "jest": "^22.4.2",
+    "jest-cli": "^23.4.1",
     "node-sass": "^4.9.2",
     "raf": "^3.4.0",
     "react": "^16.4.1",
