--- a/package.json
+++ b/package.json
@@ -47,18 +47,18 @@
     "gh-pages": "^1.1.0",
     "node-sass": "^4.9.2",
     "raf": "^3.4.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-reconciler": "^0.12.0",
     "react-scripts": "^1.1.4",
+    "react-test-renderer": "^16.4.1",
     "rollup": "^0.54.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-peer-deps-external": "^2.0.0",
     "rollup-plugin-postcss": "^1.1.0",
-    "style-loader": "^0.21.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-reconciler": "^0.12.0",
-    "react-test-renderer": "^16.4.1"
+    "style-loader": "^0.21.0"
   },
   "files": [
     "dist"
